k8s/zigbee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      volumes:
        - name: zigbee2mqtt-data
          hostPath:
            path: "/data/homeassistant/zigbee2mqtt/data"
            type: Directory
        - name: udev
          hostPath:
            path: /run/udev
      containers:
        - image: koenkk/zigbee2mqtt:2.14.2 # {"$imagepolicy": "homeassistant:zigbee2mqtt"}
          name: zigbee2mqtt
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /app/data
              #- name: udev
              #  mountPath: /run/udev
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
