k8s/zigbee2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: homeassistant
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - protocol: TCP
      port: 8080
      name: http
